postReview, do not use Collections but .of(...)